Edit styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p>
         I would like to be styled with the internal method, please
     </p>
-    <button color="black" background-color="orange" font-size="18">
+    <button style="color: black; background-color: orange; font-size: 18px">
         Inline Method
     </button>
 </body>
