--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
    <ol>
-    <li href="/css01/main.html">CSS1 Project</li>
+    <li>
+        <a href="/css01/main.html">CSS1 Project</a>
+    </li>
    </ol>
 </body>
 </html>
