--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <ol>
     <li>
-        <a href="/css01/main.html">CSS1 Project</a>
+        <a href="./css01/main.html">CSS1 Project</a>
     </li>
    </ol>
 </body>
