Add css02 dir and the files within

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <li>
         <a href="./css01/main.html">CSS1 Project</a>
     </li>
+    <li>
+        <a href="./css02/main.html">CSS1 Project</a>
+    </li>
    </ol>
 </body>
 </html>
