--- a/css02/main.html
+++ b/css02/main.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="odd">Number 1 - I'm a class.</div>
+    <p class="odd">Number 1 - I'm a class.</p>
     <div id="second">Number 2 - I'm one ID.</div>
-    <div class="odd third">Number 3 - I'm a class, but cooler.</div>
+    <p class="odd third">Number 3 - I'm a class, but cooler.</p>
     <div class="fourth">Number 4 - I'm another ID.</div>
-    <div class="odd">Number 5 - I'm a class!</div>
+    <p class="odd">Number 5 - I'm a class!</p>
 </body>
 </html>
