--- a/css03/main.html
+++ b/css03/main.html
@@ -5,18 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <ol>
-    <li>
-        <a href="./css01/main.html">CSS1 Project</a>
-    </li>
-    <li>
-        <a href="./css02/main.html">CSS2 Project</a>
-    </li>
-    <li>
-        <a href="./css03/main.html">CSS3 Project</a>
-    </li>
-   </ol>
+    <button class="first">Click me!</button>
+    <button class="second">No, click me!</button>
 </body>
 </html>
